# PLATEAU-UC22-024-CityGMLtoRobotMap

./: .gitignore  EXAMPLE.html  EXAMPLE.md  Install.html  README.md  Usage.html  align_bim.py  book.json  create_sampling_point_cloud.py  cut_dem_around_building.py  gml2obj.py  index.html  index.json  manifest.json  merge_multi_point_cloud.py  mesh_code_util.py  package.json  pyproject.toml  search_index.json  view_obj.py
.github/workflows/: ci.yml
Documentation/: docfx.json  index.md
Documentation/manual/: 1_gml2obj.md  2_create_pointcloud.md  3_ifc_convert.md  4_align.md  5_merge.md  EXAMPLE.md  Install.md  README.md  Usage.md  toc.yml
docs/: EXAMPLE.md  Install.md  README.md  SUMMARY.md  Usage.md
docs/_book/: Install.html
manual/: 1_gml2obj.html  2_create_pointcloud.html  3_ifc_convert.html  4_align.html  5_merge.html  EXAMPLE.html  Install.html  README.html  SUMMARY.html  Usage.html  toc.html
